2005-05-27  Roger While <simrw@sim-basis.de>

	* DB headers can also be in db4/ db4.1/ db4.2/ db4.3/

2005-05-21  Roger While <simrw@sim-basis.de>

	* Allow configure option --with-dl for native dynamic
	  linking instead of ltdl. This is a win eg. on Linux
	  as native dl is anyway used.

2005-05-17  Roger While <simrw@sim-basis.de>

	* configure, configure.ac, all Makefile.in
	  Fix up COB_CFLAGS and COB_LIBS.
	  Cater for defining CPPFLAGS and LDFLAGS.
	  We have to propogate these to the compiler.

2005-05-13  Roger While <simrw@sim-basis.de>

	* CVS Version bumped to 0.33

2005-05-12  Roger While <simrw@sim-basis.de>

	* Version 0.32 released

2005-05-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Revert WORDS_BIGENDIAN. We do not need it.
	  configure.ac, configure, Mak** : Fix missing variables.
	  Run autoreconf

2005-04-15  Keisuke Nishida  <knishida@open-cobol.org>

	* configure.ac (WORDS_BIGENDIAN): New variable.

2005-04-13  Keisuke Nishida  <knishida@open-cobol.org>

	* configure.ac (LIBCOB_CFLAGS): Set -fPIC when necessary.

2005-03-03  Roger While <simrw@sim-basis.de>

	* configure.ac, configure, config.h.in :
	  Version to 0.32
	  Pull out the hard-coded -shared from cobc.c
	  and define it in configure.
	  Get the strip command and put into config.h
	* ltmain.sh : Latest version

2005-02-07  Roger While <simrw@sim-basis.de>

	* configure.ac : Check for cygwin/mingw on
	  cobcrun make

2005-02-01  Roger While <simrw@sim-basis.de>

	* Version 0.31 released

2005-01-13  Roger While <simrw@sim-basis.de>

	* configure.ac, configure, config.h.in
	* Generate compiler/linker options in config.h
	  for exporting symbols and PIC code.
	  Will eventually be used by cobc.c.

2004-11-29  Roger While <simrw@sim-basis.de>

	* New directory bin for cobcrun driver program
	* configure.ac, Makefile.am

2004-10-30  Roger While <simrw@sim-basis.de>

	* configure.ac, configure (over autoconf) :
	  Change entry point name check from __db_dbopen