@@ -108,7 +108,10 @@ AC_CHECK_FUNCS([dbopen],
     3) AC_CHECK_HEADERS([db.h db_185.h db3/db_185.h db4/db_185.h db4.1/db_185.h db4.2/db_185.h db4.3/db_185.h])
        AC_CHECK_LIB([db], [__db_open],
          [USE_DB="yes" LIBCOB_LIBS="$LIBCOB_LIBS -ldb"],
-         [AC_MSG_ERROR(libdb is required)])
+#         [AC_MSG_ERROR(libdb is required)])
+          [AC_CHECK_LIB([db], [dbopen],
+            [USE_DB="yes" LIBCOB_LIBS="$LIBCOB_LIBS -ldb"],
+            [AC_MSG_ERROR(libdb is required)])])
        ;;
    esac])
 
