@@ -1,3 +1,8 @@
+2005-06-01  Roger While <simrw@sim-basis.de>
+
+	* Makefile*, fileio.c, common.c : Hacks for MinGW
+	  move.c : Include math.h
+
 2005-05-31  Roger While <simrw@sim-basis.de>
 
 	* common.h, common.c, numeric.c, move.c, termio.c :
