@@ -1,3 +1,7 @@
+2005-06-01  Roger While <simrw@sim-basis.de>
+
+	* configure.ac, configure : Change for MingW
+
 2005-05-27  Roger While <simrw@sim-basis.de>
 
 	* DB headers can also be in db4/ db4.1/ db4.2/ db4.3/
